# TIDE

./: .gitmodules  Dockerfile  Makefile  Makefile (for docker)  README.md
SatPlan2006/: Makefile  prefix_plan
SatPlan2006/include/: bb  lex.fct_pdddl.c  lex.fct_pddl.c  satplan  scan-fct_pddl.tab.c
SatPlan2006/tests/: p1.pddl
competitors/pddlTEG2pddl/: compiled_dom.pddl  compiled_prob.pddl  convert.sh  genaut.pl  launch_compilation.sh  pddl2effax.pl  pddl2effax.sh  pddl2pl.perl  pddlteg2pddl.sh  regress.pl  teg2pddl.sh  topddl.pl  verbosity.pl
competitors/pddlTEG2pddl/tmp/: input-domain.TkfjulX.pl  input-problem.2KZh1Vf.pl  input-problem.2QvR1RV.pl  input-problem.2yaGpdn.pl  input-problem.425Xe2u.pl  input-problem.57JyMu0.pl  input-problem.6KVx8vz.pl  input-problem.6SUQlan.pl  input-problem.76mePmx.pl  input-problem.C47nKy5.pl  input-problem.DSkToTi.pl  input-problem.ETC7TTt.pl  input-problem.FcubZ4s.pl  input-problem.GoPf8rD.pl  input-problem.H8Edgxh.pl  input-problem.ITqCXui.pl  input-problem.IZQIAWa.pl  input-problem.K9GZmhZ.pl  input-problem.L7u0xT4.pl  input-problem.RDX0mMY.pl  input-problem.RJ2W1vX.pl  input-problem.SGSqXpZ.pl  input-problem.TJL5nNG.pl  input-problem.VUdqzRf.pl  input-problem.VV1el1W.pl  input-problem.WE1UXIT.pl  input-problem.YH2Ceqh.pl  input-problem.Z7HOliW.pl  input-problem.dLNlhwI.pl  input-problem.hUpgb9O.pl  input-problem.iKqIgoJ.pl  input-problem.ngf7Urq.pl  input-problem.pCdQ9On.pl  input-problem.pCrUfoE.pl  input-problem.q0dKP6Q.pl  input-problem.qh2zJkf.pl  input-problem.ssXD6XB.pl  input-problem.xdHDu90.pl  input-problem.yMx8nnZ.pl  input-problem.z1jFpK4.pl  (+60 more)
competitors/prologex/: compiled_dom.pddl  convert.sh  launch_compilation.sh  pddl2effax.sh  sas_plan.1
competitors/prologex/tmp/: a03_dp.pddl  a04_dp.pddl  a05_dp.pddl  b03_dp.pddl  b04_dp.pddl  b05_dp.pddl  c03_dp.pddl  c04_dp.pddl  c05_dp.pddl  d03_dp.pddl  d04_dp.pddl  d05_dp.pddl  domain-a03.pl  domain-a04.pl  domain-a04_a04_dp.pddl  domain-a05.pl  domain-a05_a05_dp.pddl  domain-b03.pl  domain-b03_b03_dp.pddl  domain-b04.pl  domain-b04_b04_dp.pddl  domain-b05.pl  domain-b05_b05_dp.pddl  domain-c03.pl  domain-c03_c03_dp.pddl  domain-c04.pl  domain-c04_c04_dp.pddl  domain-c05.pl  domain-c05_c05_dp.pddl  domain-d03.pl  domain-d03_d03_dp.pddl  domain-d04.pl  domain-d04_d04_dp.pddl  domain-d05.pl  domain-d05_d05_dp.pddl  domain-e03.pl  domain-e03_e03_dp.pddl  domain-e04.pl  domain-e04_e04_dp.pddl  domain-e05.pl  (+51 more)
competitors/rovers_ltl/: problem.pddl
data/deterministic/FOND4LTLf/S24/blocksworld/: blocksworld_teg1.json  blocksworld_teg2.json  t10.pddl  t11.pddl  t12.pddl  t13.pddl  t14.pddl  t15.pddl  t16.pddl  t17.pddl  t18.pddl  t19.pddl  t20.pddl  t21.pddl  t22.pddl  t23.pddl  t24.pddl  t25.pddl  t3.pddl  t4.pddl  t5.pddl  t6.pddl  t7.pddl  t8.pddl  t9.pddl
data/deterministic/FOND4LTLf/S24/openstacks/: domain.pddl  n04.pddl  openstacks_teg.json
data/deterministic/FOND4LTLf/TB15/blocksworld/: a03.pddl  a04.pddl  b04.pddl  blocksworld_teg.json  c04.pddl
data/deterministic/FOND4LTLf/TB15/openstacks/: a05.pddl  e03.pddl  e04.pddl  e05.pddl  openstacks_teg.json
data/deterministic/FOND4LTLf/TB15/rovers/: domain.pddl  f01.pddl  f02.pddl  f03.pddl  rovers_teg.json
data/deterministic/LTLf/BF23/blocksworld/: p33.pddl  p34.pddl  p35-1.pddl  p43.pddl  p44.pddl  p45.pddl  p46.pddl  p5.pddl  p54.pddl  p56.pddl  p6.pddl  p76.pddl  p8.pddl  p86.pddl  p9.pddl  p96.pddl
data/deterministic/LTLf/New/blocksworld/: bad_p01-1.pddl  p01-2.pddl  p01.pddl  p02-1.pddl  p02-2.pddl  p02-3.pddl  p02-4.pddl  p02-5.pddl  p02-6.pddl  p02-7.pddl  p02.pddl  p03.pddl  p04.pddl  p05.pddl  p06.pddl  p07.pddl
data/deterministic/LTLf/S24/blocksworld/: a5.pddl  m10.pddl  m11.pddl  m12.pddl  m13.pddl  m14.pddl  m15.pddl  m16.pddl  m17.pddl  m18.pddl  m19.pddl  m20.pddl  m21.pddl  m22.pddl  m23.pddl  m24.pddl  m25.pddl  m26.pddl  m27.pddl  m28.pddl  m29.pddl  m3.pddl  m30.pddl  m31.pddl  m32.pddl  m33.pddl  m34.pddl  m35.pddl  m36.pddl  m37.pddl  m38.pddl  m39.pddl  m4.pddl  m40.pddl  m41.pddl  m42.pddl  m43.pddl  m44.pddl  m45.pddl  m46.pddl  (+74 more)
include/domain/: DomainState.h  PDDLAction.h  PDDLDomain.h  PDDLProblem.h  PDDLState.h
include/ltl/: Constants.h  DFAManager.h  DFANode.h  DomainManager.h  LTLFormula.h  ProductState.h
lib/src/domain/: GridWorldDomain.d  GridWorldPlotter.d  PDDLAction.d  PDDLDomain.d  PDDLProblem.d  PDDLState.d
lib/src/ltl/: DFAManager.d  DFANode.d  DomainManager.d  ProductManager.d  TEGProblem.d
lib/src/main/: main_single.d
pddlboat/: .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  README.md  generate_bindings.py  package.xml  run.sh
pddlboat/CMakeModules/: CompilerSettings.cmake
pddlboat/include/pddlboat/: macros.hpp  utility.hpp
pddlboat/include/pddlboat/parser/: adapted.hpp  ast.hpp  keywords.hpp  parser.hpp  translator.hpp
pddlboat/include/pddlboat/solver/: astarplanner.hpp  dependency.hpp  domain.hpp  expression.hpp  expressions.hpp  fdplanner.hpp  ffplanner.hpp  helper.hpp  planner.hpp  symkplanner.hpp  variables.hpp  z3planner.hpp
pddlboat/py/: pddlboat.cpp  setup.py
pddlboat/py/pddlboat/: __init__.py  pddlboat.pyi
pddlboat/src/: ast.cpp  astarplanner.cpp  dependency.cpp  domain.cpp  expressions.cpp  fdplanner.cpp  ffplanner.cpp  keywords.cpp  parser.cpp  planner.cpp  symkplanner.cpp  translator.cpp  utility.cpp  z3planner.cpp
scripts/: gen_ltlf_formulas2.py  gen_ppltl_formulas.py  gen_ppltl_formulas2.py  gen_tower2_problems.py  gen_tower_problems.py  run_all_in_dir.sh  run_all_problems_blocksworld.sh  run_all_problems_blocksworld_others.sh  run_all_problems_elevators.sh  run_all_problems_elevators_others.sh  run_all_problems_openstacks.sh  run_all_problems_openstacks_others.sh  run_others_all_in_dir.sh  run_others_single.sh  run_single.sh  run_single_elevators.sh
src/domain/: PDDLAction.cpp  PDDLDomain.cpp  PDDLProblem.cpp  PDDLState.cpp
src/ltl/: DFAManager.cpp  DFANode.cpp  DomainManager.cpp
src/main/: main_all.cpp  main_all_in_dir_others.cpp  main_all_in_dir_others_with_astar.cpp  main_single.cpp  main_single_others.cpp
(+28 files in other folders)
