<?xml version="1.0"?>
<package format="2">
  <name>pddlboat</name>
  <version>0.1.0</version>
  <description>PDDL parsing, manipulation, and planning</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
